--- a/Portal.Client/Components/ScheduleComponents/ViewScheduleIndividualDialog.razor
+++ b/Portal.Client/Components/ScheduleComponents/ViewScheduleIndividualDialog.razor
@@ -30,7 +30,7 @@
                     <div class="item-row">
                         <span class="item-label">View Job</span>
                         <span class="item-value">
-                            <MudButton Href=@($"/jobs/{CalendarItem.JobId}") Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" StartIcon="@Icons.Material.Filled.RemoveRedEye" Class="view-button">View</MudButton>
+                            <MudButton Href=@($"/jobs/{CalendarItem.JobId}/false") Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" StartIcon="@Icons.Material.Filled.RemoveRedEye" Class="view-button">View</MudButton>
                         </span>
                     </div>
                     <div class="item-row">
