--- a/Portal.Client/Pages/Council/Council.razor
+++ b/Portal.Client/Pages/Council/Council.razor
@@ -173,7 +173,7 @@ else
                                                 <StatusBadge statusEnum="@((JobTypeEnum)job.JobTypeInt)" />
                                             </td>
                                             <td class="d-flex flex-row">
-                                                <MudIconButton Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" Href="@($"/jobs/{job.JobId}")" Icon="@Icons.Material.Filled.RemoveRedEye"/>
+                                                <MudIconButton Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" Href="@($"/jobs/{job.JobId}/false")" Icon="@Icons.Material.Filled.RemoveRedEye"/>
                                                 <button class="btn-icon-small">✏️</button>
                                                 <button class="btn-icon-small">🗑️</button>
                                             </td>
