--- a/Portal.Client/Pages/Job/Job.razor
+++ b/Portal.Client/Pages/Job/Job.razor
@@ -1,4 +1,4 @@
-﻿@page "/jobs/{JobId:int}"
+﻿@page "/jobs/{JobId:int}/{IsEditing:bool}"
 @inherits BaseDataComponent
 @using Portal.Client.Components.JobComponents
 @using Portal.Shared
