--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -20,6 +20,7 @@
 @using Heron.MudCalendar
 @using Portal.Shared.DTO.Setting
 @using Portal.Shared.ResponseModels
+@using MudExRichTextEditor
 
 @inject IApiService _apiService;
 @inject NavigationManager _navigationManager;
