--- a/Portal.Client/Components/JobComponents/JobInfo.razor
+++ b/Portal.Client/Components/JobComponents/JobInfo.razor
@@ -7,7 +7,16 @@
             {
                 <div class="info-row">
                     <span class="info-label">Contact</span>
-                    <span class="info-value">@Contact.ContactName</span>
+                    <span class="info-value" @onmouseover="@(() => showViewContactButton = true)" @onmouseleave="@(() => showViewContactButton = false)">
+                        @if (showViewContactButton)
+                        {
+                            <MudButton Href=@($"/contacts/{Contact!.ContactId}") Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" StartIcon="@Icons.Material.Filled.RemoveRedEye" Class="view-button">View</MudButton>
+                        }
+                        else
+                        {
+                            @Contact.ContactName
+                        }
+                    </span>
                 </div>
                 <div class="info-row">
                     <span class="info-label">Email</span>
@@ -23,8 +32,8 @@
                 <div class="info-row">
                     <span class="info-label">Council</span>
 
-                    <span class="info-value" @onmouseover="@(() => showButton = true)" @onmouseleave="@(() => showButton = false)">
-                        @if (showButton)
+                    <span class="info-value" @onmouseover="@(() => showViewCouncilButton = true)" @onmouseleave="@(() => showViewCouncilButton = false)">
+                        @if (showViewCouncilButton)
                         {
                             <MudButton Href=@($"/councils/{Council!.CouncilId}") Variant="Variant.Text" Color="Color.Primary" Size="Size.Small" StartIcon="@Icons.Material.Filled.RemoveRedEye" Class="view-button">View</MudButton>
                         }
@@ -65,6 +74,7 @@
     [Parameter]
     public string? PlanRef { get; set; }
 
-    private bool showButton = false;
+    private bool showViewCouncilButton = false;
+    private bool showViewContactButton = false;
 }
 
