--- a/Portal.Client/Pages/Job/Jobs.razor
+++ b/Portal.Client/Pages/Job/Jobs.razor
@@ -37,7 +37,7 @@
                     <TemplateColumn StickyLeft="true" Title="Action">
                         <CellTemplate>
                             <div class="d-flex flex-row">
-                                <MudIconButton Variant="Variant.Text" Color="Color.Info" Size="Size.Small" Href="@($"/jobs/{context.Item.JobId}")" Icon="@Icons.Material.Filled.RemoveRedEye" />
+                                <MudIconButton Variant="Variant.Text" Color="Color.Info" Size="Size.Small" Href="@($"/jobs/{context.Item.JobId}/false")" Icon="@Icons.Material.Filled.RemoveRedEye" />
                                 <button class="btn-icon-small">✏️</button>
                                 <button class="btn-icon-small">🗑️</button>
                             </div>
