--- a/Portal.Client/Pages/Dashboard.razor.css
+++ b/Portal.Client/Pages/Dashboard.razor.css
@@ -254,3 +254,23 @@
     transform: translate(-50%, -50%);
 }
 
+.custom-grid {
+    display: grid;
+    grid-template-columns: repeat(8, 120px);
+    grid-template-rows: repeat(8, 120px);
+
+    /* Create the grid background */
+    background-size: calc(150px + 1rem) calc(150px + 1rem);
+    background-image:
+        linear-gradient(to right, #e0e0e0 1px, transparent 1px),
+        linear-gradient(to bottom, #e0e0e0 1px, transparent 1px);
+    background-color: #f9f9f9; 
+    min-height: 100vh;
+}
+
+.grid-item {
+    background: var(--color-white);
+    color: var(--color-primary);
+    border-radius: var(--border-rad);
+    padding: 1rem;
+}
